--- a/ShoppingList/View/CreateShoppingList.xaml
+++ b/ShoppingList/View/CreateShoppingList.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ShoppingList.View.MainPage"
+    x:Class="ShoppingList.View.CreateShoppingList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ViewModel="using:ShoppingList.ViewModel"
@@ -31,17 +31,5 @@
             Command="{Binding NavigateToCreateShoppingListCommand}"
             Content="+"
             FontSize="50" />
-        <ListView
-            Grid.Row="1"
-            ItemsSource="{Binding ShoppingListList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-            SelectedItem="{Binding SelectedShoppingList, Mode=TwoWay}">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <TextBlock FontSize="50" Text="{Binding ShoppinglistName}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
     </Grid>
 </Page>
