--- a/ShoppingList/View/MainPage.xaml
+++ b/ShoppingList/View/MainPage.xaml
@@ -38,7 +38,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock FontSize="50" Text="{Binding ShoppinglistName}" />
+                        <TextBlock FontSize="50" Text="{Binding ShoppinglistName, Mode=TwoWay}" />
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
