--- a/ShoppingList/View/MainPage.xaml
+++ b/ShoppingList/View/MainPage.xaml
@@ -38,8 +38,8 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock FontSize="50" Text="{Binding ShoppinglistName, Mode=TwoWay}" />
-                        <TextBlock/>
+                        <TextBlock FontSize="25" Text="{Binding ShoppinglistName, Mode=TwoWay}" />
+                        <TextBlock Text="{Binding Category}" />
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
