--- a/ShoppingList/View/CreateItem.xaml
+++ b/ShoppingList/View/CreateItem.xaml
@@ -2,22 +2,40 @@
     x:Class="ShoppingList.View.CreateItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ShoppingList.View"
+    xmlns:ViewModel="using:ShoppingList.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:ShoppingList.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
+    <Page.DataContext>
+        <ViewModel:ViewModel />
+    </Page.DataContext>
     <Grid Background="Gold">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="6*" />
         </Grid.RowDefinitions>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2">
+        <Button
+            Grid.Column="0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Stretch"
+            Command="{Binding GoBackCommand}">
+            <Button.Background>
+                <SolidColorBrush Opacity="0" />
+            </Button.Background>
+            <StackPanel>
+                <Image Height="20" Source="/Assets/BackImage.png" />
+            </StackPanel>
+        </Button>
+        <StackPanel
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
             <TextBlock
                 FontFamily="Comic Sans MS"
                 FontSize="50"
@@ -25,21 +43,36 @@
                 Text="Opret vare" />
         </StackPanel>
         <StackPanel Grid.Row="2" HorizontalAlignment="Center">
-            <TextBlock x:Name="VareNavn" Text="Vare navn" TextAlignment="Center"/>
-            <TextBox x:Name="VareUserInput" TextAlignment="Center"/>
-            <TextBlock x:Name="VareMængde" Text="Indtast vare mængde" TextAlignment="Center"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBox x:Name="VareMængdeUserInput" TextAlignment="Center"/>
-                <ComboBox PlaceholderText="Vælg en type">
+            <TextBox
+                x:Name="VareUserInput"
+                Margin="0,5"
+                PlaceholderText="Vare navn"
+                Text="{Binding ItemNameVM, Mode=TwoWay}" />
+            <StackPanel Margin="0,5" Orientation="Horizontal">
+                <TextBox
+                    x:Name="VareMængdeUserInput"
+                    PlaceholderText="Mængde"
+                    Text="{Binding ItemAmountVM, Mode=TwoWay}"
+                    TextAlignment="Center" />
+                <ComboBox
+                    Width="130"
+                    PlaceholderText="Vælg en type"
+                    SelectedValue="{Binding ItemAmountTypeVM, Mode=TwoWay}">
                     <x:String>Gram</x:String>
                     <x:String>Kilo</x:String>
                     <x:String>Liter</x:String>
                     <x:String>Stk</x:String>
                 </ComboBox>
             </StackPanel>
-            <TextBlock x:Name="Pris" Text="Indtast prisen for varen" TextAlignment="Center"/>
-            <TextBox x:Name="PrisUserInput" />
-            <ComboBox PlaceholderText="Vælg en butik">
+            <TextBox
+                x:Name="PrisUserInput"
+                Margin="0,5"
+                PlaceholderText="Vare pris (ca)"
+                Text="{Binding ItemPriceVM, Mode=TwoWay}" />
+            <ComboBox
+                Margin="0,5"
+                PlaceholderText="Vælg en butik"
+                SelectedValue="{Binding StoreVM, Mode=TwoWay}">
                 <x:String>Netto</x:String>
                 <x:String>Meny</x:String>
                 <x:String>Føtex</x:String>
@@ -48,6 +81,11 @@
                 <x:String>Lidl</x:String>
                 <x:String>Fakta</x:String>
             </ComboBox>
+            <Button
+                Margin="0,5"
+                HorizontalAlignment="Center"
+                Command="{Binding AddItemToSelectedShoppinglistProductlistCommand}"
+                Content="Tilføj vare" />
         </StackPanel>
     </Grid>
 </Page>
