--- a/ShoppingList/View/Include/CreateNewShoppingListUC.xaml
+++ b/ShoppingList/View/Include/CreateNewShoppingListUC.xaml
@@ -2,16 +2,14 @@
     x:Class="ShoppingList.View.Include.CreateNewShoppingListUC"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ShoppingList.View.Include"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ViewModel="using:ShoppingList.ViewModel"
-    mc:Ignorable="d"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:ShoppingList.View.Include"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
-    d:DesignWidth="400">
-    <UserControl.DataContext>
-        <ViewModel:ViewModel />
-    </UserControl.DataContext>
+    d:DesignWidth="400"
+    mc:Ignorable="d">
+
     <Grid Background="CadetBlue">
         <Grid.RowDefinitions>
             <RowDefinition />
