--- a/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
+++ b/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
@@ -2,16 +2,13 @@
     x:Class="ShoppingList.View.Include.SelectedShoppingListPageUC"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ShoppingList.View.Include"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ViewModel="using:ShoppingList.ViewModel"
-    mc:Ignorable="d"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:ShoppingList.View.Include"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
-    d:DesignWidth="400">
-    <UserControl.DataContext>
-        <ViewModel:ViewModel />
-    </UserControl.DataContext>
+    d:DesignWidth="400"
+    mc:Ignorable="d">
 
     <Grid Background="teal">
         <Grid.RowDefinitions>
@@ -19,10 +16,10 @@
             <RowDefinition Height="6*" />
         </Grid.RowDefinitions>
         <Button
-                Grid.Column="0"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Stretch"
-                Command="{Binding NavigateBackToFrontpageCommand}">
+            Grid.Column="0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Stretch"
+            Command="{Binding NavigateBackToFrontpageCommand}">
             <Button.Background>
                 <SolidColorBrush Opacity="0" />
             </Button.Background>
@@ -32,18 +29,18 @@
         </Button>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBlock
-                    FontFamily="Comic Sans MS"
-                    FontSize="50"
-                    FontWeight="Bold"
-                    Text="Shopping List" />
+                FontFamily="Comic Sans MS"
+                FontSize="50"
+                FontWeight="Bold"
+                Text="Shopping List" />
         </StackPanel>
         <Button
-                Grid.Row="0"
-                HorizontalAlignment="Right"
-                Background="Transparent"
-                Command="{Binding NavigateToCreateItemCommand}"
-                Content="+"
-                FontSize="50" />
+            Grid.Row="0"
+            HorizontalAlignment="Right"
+            Background="Transparent"
+            Command="{Binding NavigateToCreateItemCommand}"
+            Content="+"
+            FontSize="50" />
         <ListView Grid.Row="1" ItemsSource="{Binding SelectedShoppingList.ProductCatalog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <ListView.ItemTemplate>
                 <DataTemplate>
