--- a/ShoppingList/View/Include/CreateItemUC.xaml
+++ b/ShoppingList/View/Include/CreateItemUC.xaml
@@ -67,6 +67,11 @@
                 Margin="0,5"
                 PlaceholderText="Vare pris (ca)"
                 Text="{Binding ItemPriceVM, Mode=TwoWay}" />
+            <TextBox
+                x:Name="ItemCatagoryUserInput"
+                Margin="0,5"
+                PlaceholderText="Vare catagory"
+                Text="{Binding ItemCatagoryVM, Mode=TwoWay}" />
             <ComboBox
                 Margin="0,5"
                 PlaceholderText="Vælg en butik"
