--- a/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
+++ b/ShoppingList/View/Include/SelectedShoppingListPageUC.xaml
@@ -71,6 +71,7 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition />
                                     <RowDefinition />
+                                    <RowDefinition />
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition />
@@ -120,6 +121,15 @@
                                     FontWeight="SemiLight"
                                     Foreground="Bisque"
                                     Text="{Binding Store}" />
+                                <TextBlock
+                                    Grid.Row="2"
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Top"
+                                    FontSize="15"
+                                    FontWeight="SemiLight"
+                                    Foreground="Bisque"
+                                    Text="{Binding ItemCatagory}" />
                             </Grid>
                         </Border>
                     </DataTemplate>
